Bug 327429 - "Previous conversation" link point to message after current one instead of before message
Summary: "Previous conversation" link point to message after current one instead of be...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: log-viewer (other bugs)
Version First Reported In: 0.7.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-11 00:15 UTC by Ezio Vergine
Modified: 2013-11-22 11:24 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.7.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ezio Vergine 2013-11-11 00:15:29 UTC
Previous conversation link point to message received after current one (in time) instead of message received before. I remember that old version work right in this case.

Reproducible: Always
Comment 1 Martin Klapetek 2013-11-15 09:25:54 UTC
Confirmed, we just tested.

"Next conversation" goes to "next" in the list of conversations which you have on the side, so in that sense it's correct. However it is a bit misleading. 

Simple solution could be to reverse-sort the side list, but having the most recent conversation on top is imho good. We just need to reword the strings.

"Newer" and "Older" conversations maybe?
Comment 2 Ezio Vergine 2013-11-16 14:08:48 UTC
I think the best solution would be this:

- sort of conversations on the side is ok (top - newer, bottom - older)
- in chat the button are, as you proposed:

Older conversation
[....
chat log
..,]
Newer conversation

- Older conversation -> go to previous (in date) chat log 
- Newer conversation -> go to next (in date) chat log

Bye
Comment 3 Daniel Vrátil 2013-11-21 14:52:32 UTC
Since we can't change translations in 0.7, I propose this:

- in 0.7 branch I swap the strings so that "Previous conversation" points to messages before the current one
- in 0.8 branch I update the strings to "Older Conversation"/"Newer Conversation" 

Everyone OK with that?
Comment 4 Ezio Vergine 2013-11-21 14:54:19 UTC
Ok for me. Thanx
Comment 5 David Edmundson 2013-11-21 15:38:20 UTC
0.8 may be really soon - I'd be happy with you fixing this in just 0.8.0
Comment 6 Martin Klapetek 2013-11-21 16:04:04 UTC
As some recently released distros (openSuse, Kubuntu...) ship 0.7 and won't accept 0.8 into main repos, please let's fix it in 0.7 too. Unless there won't be anymore 0.7.x releases.
Comment 7 Daniel Vrátil 2013-11-22 11:22:55 UTC
Git commit c92dde59b42b16dbe4f8c1004233d1a970f9498e by Dan Vrátil.
Committed on 22/11/2013 at 10:44.
Pushed by dvratil into branch 'kde-telepathy-0.7'.

Swap Previous and Next Conversation links in LogViewer

As pointed out, they make more sense this way.

FIXED-IN: 0.7.1

M  +4    -4    logviewer/message-view.cpp

http://commits.kde.org/telepathy-text-ui/c92dde59b42b16dbe4f8c1004233d1a970f9498e
Comment 8 Daniel Vrátil 2013-11-22 11:23:34 UTC
Git commit f53b27104724687861ebb35213356799ac24b62d by Dan Vrátil.
Committed on 22/11/2013 at 11:21.
Pushed by dvratil into branch 'master'.

Improve Previous/Next Conversation links in LogViewer

Use Older/Newer Conversation instead, as it's more clear that way

M  +2    -2    logviewer/message-view.cpp

http://commits.kde.org/telepathy-text-ui/f53b27104724687861ebb35213356799ac24b62d