Improve Previous/Next Conversation links in LogViewer

Use Older/Newer Conversation instead, as it's more clear that way

BUG: 327429